# Tech-Challenge-4

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-ecr.yml
app/: main.py
examples/: predict_lstm_payload.json  predict_rnn_payload.json
infra/: ecs-task-definition.json
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: cleanup_aws_before_destroy.sh  collect_data.py  orchestrate.py  post_destroy_cleanup.sh  predict.py  sync_artifacts_to_s3.sh  train_lstm.py  train_recurrent_models.py
src/stock_forecast/: __init__.py  artifacts.py  collection.py  config.py  data.py  features.py  inference.py  metrics.py  storage.py  tensorflow_runtime.py
tests/: test_artifacts.py  test_collection.py  test_inference.py  test_metrics.py  test_storage.py
