[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petrobras-stock-forecast"
version = "0.1.0"
description = "RNN and LSTM pipeline for PETR4.SA next close price forecasting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yfinance>=0.2.40",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1",
  "tensorflow-cpu>=2.16.1",
  "optuna>=3.6.1",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "joblib>=1.4.2",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "pydantic>=2.8.2",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
